--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Mac 
+.DS_Store
+*.tar.gz
+
 # Logs
 logs
 *.log
@@ -35,3 +39,9 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Mongo Databases
+m101js/Final Exam/db
+
+# Bower components
+bower_components
